# mm-strategies

./: .gitignore  Cargo.toml  README.md
scripts/: check_data.py  convert.py  data_utils.py  liquidity_report.py  preview_book.py  record_data.py  visualize_catalog.py  visualize_catalog_panel.py
src/: lib.rs  records.rs  writers.rs
strategies/: avellaneda_stoikov_market_making.py  backtest_avellaneda_stoikov.py  visualize_backtest.py
