[package]
name = "mm-strategies"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
arrow = { version = "57.3.0", default-features = false, features = ["ipc"] }
clap = { version = "4.6", features = ["derive"] }
log = "0.4"
nautilus-common = { version = "0.54.0", features = ["live"] }
nautilus-core = "0.54.0"
nautilus-data = { version = "0.54.0", features = ["streaming"] }
nautilus-hyperliquid = "0.54.0"
nautilus-live = { version = "0.54.0", features = ["streaming"] }
nautilus-model = { version = "0.54.0", features = ["high-precision"] }
nautilus-persistence = "0.54.0"
nautilus-serialization = { version = "0.54.0", features = ["arrow"] }
nautilus-system = { version = "0.54.0", features = ["streaming"] }
object_store = "0.12.5"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }

[[bin]]
name = "live-recorder"
path = "src/bin/live_recorder.rs"
